ajout crud colocation & modification des feedbaks en couleur & ajout recherche prise en compte clavier touche entrer
